--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Kuno Woudt <kuno@frob.nl>",
   "license": "copyleft-next-0.3.0",
   "dependencies": {
+    "chai": "^3.5.0",
     "eslint": "^2.7.0",
     "harmony-proxy": "^1.0.0",
     "mocha": "^2.4.5"
