--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
         "quote-props": [1, "as-needed"],
         "quotes": [1, "single"],
         "space-before-function-paren": [2, "always"],
-        "space-after-keywords": [2, "always"],
+        "keyword-spacing": ["error", {"before": true, "after": true, "overrides": {}}],
         "space-before-blocks": [2, "always"],
         "space-in-parens": [2, "never"],
         "react/jsx-boolean-value": 2,
