--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   "author": "Kuno Woudt <kuno@frob.nl>",
   "license": "copyleft-next-0.3.0",
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
     "eslint": "^2.7.0",
+    "eslint-plugin-react": "^4.3.0",
     "harmony-proxy": "^1.0.0",
+    "left-pad": "^1.0.1",
     "mocha": "^2.4.5"
   }
 }
