--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "Kuno Woudt <kuno@frob.nl>",
   "license": "copyleft-next-0.3.0",
   "dependencies": {
-    "babel": "^6.5.2",
+    "babel-cli": "^6.7.5",
     "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
+    "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
