--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,11 @@
 {
+    "parser": "babel-eslint",
     "plugins": [
         "react"
     ],
     "ecmaFeatures": {
-        "jsx": true
+        "jsx": true,
+        "modules": true
     },
     "env": {
         "browser": true,
