--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "copyleft-next-0.3.0",
   "dependencies": {
     "babel-cli": "^6.7.5",
+    "babel-eslint": "^6.0.2",
     "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
     "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
