--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
+    "curl-amd": "^0.8.12",
     "eslint": "^2.7.0",
     "eslint-plugin-react": "^4.3.0",
     "harmony-proxy": "^1.0.0",
