--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,14 @@
 {
-    "parser": "babel-eslint",
     "plugins": [
         "react"
     ],
-    "ecmaFeatures": {
-        "jsx": true,
-        "modules": true
+    "parserOptions": {
+        "ecmaVersion": 7,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true,
+            "modules": true
+        }
     },
     "env": {
         "browser": true,
