--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint-plugin-react": "^4.3.0",
     "harmony-proxy": "^1.0.0",
     "left-pad": "^1.0.1",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "n3": "^0.4.5",
+    "underscore.string": "^3.3.4"
   }
 }
