Further query tests

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "left-pad": "^1.0.1",
     "mocha": "^2.4.5",
     "n3": "^0.4.5",
+    "underscore": "^1.8.3",
     "underscore.string": "^3.3.4",
     "when": "^3.7.7"
   }
