--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "n3": "^0.4.5",
     "underscore": "^1.8.3",
     "underscore.string": "^3.3.4",
+    "urijs": "^1.18.1",
     "when": "^3.7.7"
   }
 }
