--- a/.eslintrc
+++ b/.eslintrc
@@ -1,49 +1,29 @@
 {
-    "plugins": [
-        "react"
-    ],
     "parserOptions": {
-        "ecmaVersion": 7,
-        "sourceType": "module",
         "ecmaFeatures": {
-            "jsx": true,
-            "modules": true
-        }
+            "jsx": true
+        },
     },
     "env": {
         "browser": true,
+        "es6": true,
         "node": true
     },
     "rules": {
-        "consistent-this": [2, "self"],
-        "max-len": [2, 96, 4],
-        "no-comma-dangle": 0,
-        "no-lonely-if": 2,
-        "no-nested-ternary": 2,
-        "no-spaced-func": 0,
-        "no-underscore-dangle": 0,
-        "no-unused-vars": [1, {"vars": "all", "args": "none"} ],
-        "quote-props": [1, "as-needed"],
-        "quotes": [1, "single"],
-        "space-before-function-paren": [2, "always"],
-        "keyword-spacing": ["error", {"before": true, "after": true, "overrides": {}}],
-        "space-before-blocks": [2, "always"],
-        "space-in-parens": [2, "never"],
-        "react/jsx-boolean-value": 2,
-        "react/jsx-no-undef": 2,
-        "jsx-quotes": 2,
-        "react/sort-prop-types": 2,
-        "react/jsx-uses-react": 2,
-        "react/jsx-uses-vars": 2,
-        "react/no-did-mount-set-state": 2,
-        "react/no-did-update-set-state": 2,
-        "react/no-multi-comp": 0,
-        "react/no-unknown-property": 2,
-        "react/prop-types": 1,
-        "react/react-in-jsx-scope": 2,
-        "react/require-extension": 0,
-        "react/self-closing-comp": 2,
-        "react/sort-comp": 2,
-        "react/wrap-multilines": 2
+        "consistent-this": ["warn", "self"],
+        "max-len": ["warn", 96, 4],
+        "no-comma-dangle": "off",
+        "no-lonely-if": "warn",
+        "no-nested-ternary": "warn",
+        "no-spaced-func": "off",
+        "no-underscore-dangle": "off",
+        "no-unused-vars": ["warn", {"vars": "all", "args": "none"} ],
+        "quote-props": ["warn", "as-needed"],
+        "quotes": ["warn", "single"],
+        "space-before-function-paren": ["warn", "always"],
+        "keyword-spacing": ["warn", { "before": true, "after": true }],
+        "space-before-blocks": ["warn", "always"],
+        "spaced-func": "warn",
+        "space-in-parens": ["warn", "never"]
     }
 }
