Rename from wêr to wald:find, part 2

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "find",
   "version": "0.0.3",
   "description": "wald:find - A library for querying RDF",
-  "main": "lib/wer.js",
+  "main": "lib/find.js",
   "scripts": {
     "test": "bin/test"
   },
