--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wald-find",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "wald:find - A library for querying RDF",
   "main": "lib/find.js",
   "scripts": {
@@ -10,17 +10,19 @@
   "license": "copyleft-next-0.3.1",
   "repository": "https://gitlab.com/wald-meta/find.git",
   "dependencies": {
-    "chai": "^3.5.0",
     "curl-amd": "^0.8.12",
-    "eslint": "^2.12.0",
     "harmony-proxy": "^1.0.0",
     "httpinvoke": "^1.4.0",
     "jsonld": "^0.4.11",
-    "mocha": "^2.4.5",
     "n3": "^0.4.5",
     "underscore": "^1.8.3",
     "underscore.string": "^3.3.4",
     "urijs": "^1.18.1",
     "when": "^3.7.7"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "eslint": "^2.12.0",
+    "mocha": "^2.4.5"
   }
 }
